# oss-context

./: .gitignore  README.md  agent.md  future_work.md  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml
src/oss_context/: __init__.py  __main__.py  architecture.py  branch_context.py  cli.py  code_index.py  db.py  formatting.py  github.py  hooks.py  intelligence.py  llm.py  markdown.py  mcp_server.py  models.py  queries.py  references.py  retrieval.py  review_assistant.py  settings.py  sync.py  web_ui.py
tests/: test_architecture.py  test_branch_context.py  test_code_index.py  test_determinism.py  test_fixtures.py  test_intelligence.py  test_issue_comments.py  test_llm.py  test_markdown.py  test_models.py  test_provenance.py  test_queries.py  test_references.py  test_regressions.py  test_retrieval.py  test_review_assistant.py  test_settings.py  test_sync_jit.py
